kubernetes/applications/enclosed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enclosed-svc
  namespace: homelab
  labels:
    app: enclosed
spec:
  ports:
    - port: 8787
      name: web
  selector:
    app: enclosed
