kubernetes/applications/enclosed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enclosed-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - enclosed.mcmumf.dev
      secretName: enclosed.mcmumf.dev-tls
  rules:
    - host: enclosed.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enclosed-svc
                port:
                  number: 8787
